--- a/index.html
+++ b/index.html
@@ -9,9 +9,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 
-    <title>Hello, world!</title>
+    <title>PlatziConf Hawai</title>
   </head>
   <body>
+
+    <!-- region header -->
+    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="assets/images/platzi-logo.png" alt="platzi-logo">
+          Conf Hawaii
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">La Conferencia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Los Oradores</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Lugar y Fecha</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Conviertete en Orador</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-platzi" href="#">Comprar Tickets</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- end region header -->
+
+    <!-- region footer -->
     <footer id="footer" class="py-4">
       <div class="container">
         <div class="row text-center">
@@ -24,6 +59,7 @@
         </div>
       </div>
     </footer>
+    <!-- end region footer -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
