--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
     </nav>
     <!-- end region header -->
 
+    <!-- region carrousel -->
+    <section id="main">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/hawaii.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/hawaii2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/hawaii3.jpeg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end region carrousel -->
+
     <!-- region footer -->
     <footer id="footer" class="py-4">
       <div class="container">
