--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- region carrousel -->
     <section id="main">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+      <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="assets/images/hawaii.jpg" class="d-block w-100" alt="...">
@@ -58,6 +58,18 @@
           </div>
           <div class="carousel-item">
             <img src="assets/images/hawaii3.jpeg" class="d-block w-100" alt="...">
+          </div>
+          <div class="overlay">
+            <div class="container">
+              <div class="row align-items-center">
+                <div class="col-md-6 offset-md-6 text-center text-md-end">
+                  <h1>Platzi Conf Hawaii</h1>
+                  <p class="d-none d-md-block">Platzi Conf llega por pimera vez a Hawaii! Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de internet. Ven a conocer a miembros del Team Platzi, a otros estudiantes de Platzi y a los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+                  <a href="#">Quiero ser orador</a>
+                  <button type="button">Comprar tickets</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
