agregar speakers section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,59 @@
     </section>
     <!-- end region carrousel -->
 
+    <!-- region speakers -->
+    <section id="speakers" class="mt-4 mb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center text-uppercase">
+            <small>Conoce a los</small>
+            <h2>Oradores</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="assets/speakers/freddy.jpeg" class="card-img-top" alt="freddy">
+              <div class="card-body">
+                <h5 class="card-title mb-0">John Freddy</h5>
+                <div class="badges mb-2">
+                  <span class="badge bg-warning">JavaScript</span>
+                  <span class="badge bg-success">VueJs</span>
+                </div>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="assets/speakers/cvander.jpeg" class="card-img-top" alt="freddy">
+              <div class="card-body">
+                <h5 class="card-title mb-0">Christhian Vander</h5>
+                <div class="badges mb-2">
+                  <span class="badge bg-warning">JavaScript</span>
+                  <span class="badge bg-success">VueJs</span>
+                </div>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="freddy">
+              <div class="card-body">
+                <h5 class="card-title mb-0">Sacha Lifszyc</h5>
+                <div class="badges mb-2">
+                  <span class="badge bg-warning">JavaScript</span>
+                  <span class="badge bg-success">VueJs</span>
+                </div>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- region footer -->
     <footer id="footer" class="py-4">
       <div class="container">
