--- a/index.html
+++ b/index.html
@@ -128,6 +128,24 @@
         </div>
       </div>
     </section>
+    <!-- end region speakers -->
+
+    <!-- region lugar y fecha -->
+    <section id="place-time">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-lg-6 pl-0 pr-0">
+            <img src="assets/images/honolulu.jpg" alt="honolulu">
+          </div>
+          <div class="col-12 col-lg-6 pt-4 pb-4">
+            <h2>Honolulu - Octubre 2025</h2>
+            <p>Honolulu es la capital y localidad más grande del estado de Hawái, en los Estados Unidos.nota 1​ Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).</p>
+            <a class="btn btn-outline-light" href="#">Conoce más</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end region lugar y fecha -->
 
     <!-- region footer -->
     <footer id="footer" class="py-4">
