--- a/index.html
+++ b/index.html
@@ -147,6 +147,48 @@
     </section>
     <!-- end region lugar y fecha -->
 
+    <!-- region formulario -->
+    <section id="conviertete-en-orador" class="my-4">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center text-uppercase">
+            <small>conviértete en un</small>
+            <h2>orador</h2>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+              Anótate como orad3or para darnos una charla ignite. Cuéntanos de qué quiere hablar!
+            </div>
+        </div>
+        <div class="row pt-2">
+          <div class="mb-3 col-lg-4 offset-lg-2">
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nombres">
+          </div>
+          <div class="mb-3 col-lg-4">
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Apellidos">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 offset-lg-2">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Sobre que quieres hablar?"></textarea>
+            <small class="form-text text-muted">Recuerda incluir un título para tu charla</small>
+          </div>
+        </div>
+        <div class="row pt-4">
+          <div class="col-lg-8 offset-lg-2">
+            <div class="d-grid">
+              <button class="btn btn-platzi" type="button">Enviar</button>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="row">
+          <textarea name="form-control" id="" cols="30" rows="10"></textarea>
+        </div> -->
+      </div>
+    </section>
+    <!-- end region formulario -->
+
     <!-- region footer -->
     <footer id="footer" class="py-4">
       <div class="container">
