--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
         <div class="row">
             <div class="col text-center">
-              Anótate como orad3or para darnos una charla ignite. Cuéntanos de qué quiere hablar!
+              Anótate como orad3or para darnos una <abbr title="Charlas de 5 minutos">charla ignite</abbr>. Cuéntanos de qué quiere hablar!
             </div>
         </div>
         <div class="row pt-2">
