agregando scroll a la página

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <title>PlatziConf Hawai</title>
   </head>
-  <body>
+  <body data-bs-spy="scroll" data-bs-target="#navbarSupportedContent" data-bs-offset="57" tabindex="0">
 
     <!-- region header -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="assets/images/platzi-logo.png" alt="platzi-logo">
@@ -26,16 +26,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">La Conferencia</a>
+              <a class="nav-link" aria-current="page" href="#main">La Conferencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Los Oradores</a>
+              <a class="nav-link" href="#speakers">Los Oradores</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Lugar y Fecha</a>
+              <a class="nav-link" href="#place-time">Lugar y Fecha</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Conviertete en Orador</a>
+              <a class="nav-link" href="#conviertete-en-orador">Conviertete en Orador</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-platzi" href="#">Comprar Tickets</a>
